Lesson66-gRPC Example/cmdserver.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: arul
  name: cmdserver
spec:
  selector:
    app: cmdserver
  ports:
  - name: "80"
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: arul
  name: cmdserver
spec:
  selector:
    matchLabels:
      app: cmdserver
  template:
    metadata:
      labels:
        app: cmdserver
    spec:
      containers:
      - name: cmdserver
        image: continubestage.azurecr.io/continube-platform/cmdserver:alpine1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
---
